--- a/css/reset.css
+++ b/css/reset.css
@@ -48,7 +48,7 @@ table {
 }
 a {
     display: inline-block;
-    text-decoration: none;
+    /*text-decoration: none;*/
 }
 table {
     width: 100%;
